--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a href="#home" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#portfolio" class="nav-link">Commands</a>
+                            <a href="#Commands" class="nav-link">Commands</a>
                         </li>
                         <li class="nav-item">
                             <a href="#pricing" class="nav-link">APIs Used</a>
@@ -88,14 +88,12 @@
         <!-- END HOME -->
 
         <!-- START FEATURES -->
-        <section class="section pb-5" id="features">
+        <section class="section pb-5" id="Commands">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <p class="title-sub-heading text-primary f-18">Our Features</p>
-                            <h2 class="title-heading">Get work done in over 300+ different categories</h2>
-                            <p class="title-desc text-muted mt-2">Donec dapibus dolor at semper dictum phasellus fringilla sem risus mollis faucibus dolor eleifend id maecenas viverra.</p>
+                            <h2 class="title-heading">Cuddly_'s Commands</h2>
                         </div>
                     </div>
                 </div>
@@ -108,10 +106,9 @@
                                 <img src="images/icon/rulers.png" class="img-fluid" alt="" />
                             </div>
 
-                            <h5 class="f-18 mt-4">Digital Product</h5>
-                            <p class="text-muted mt-3">Pellentesque viverra augarue molestie convallis sit amet interdum bibendum sem urna condimentum.</p>
+                            <h5 class="f-18 mt-4">/commands</h5>
+                            <p class="text-muted mt-3">Lists all Cuddly_ Commands!</p>
                             <div class="mt-3">
-                                <a href="" class="text-primary font-weight-600"> Learn more <i class="mdi mdi-arrow-right ml-2"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -123,10 +120,9 @@
                                 <img src="images/icon/compose.png" class="img-fluid" alt="" />
                             </div>
 
-                            <h5 class="f-18 mt-4">Digital Marketing</h5>
-                            <p class="text-muted mt-3">Passage you need sure there anything embarssing hidden the open chunks necesary making Internet.</p>
+                            <h5 class="f-18 mt-4">/ping</h5>
+                            <p class="text-muted mt-3">Pings back and shows latency!</p>
                             <div class="mt-3">
-                                <a href="" class="text-primary font-weight-600"> Learn more <i class="mdi mdi-arrow-right ml-2"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -138,158 +134,41 @@
                                 <img src="images/icon/presentation.png" class="img-fluid" alt="" />
                             </div>
 
-                            <h5 class="f-18 mt-4">Business Consult</h5>
-                            <p class="text-muted mt-3">Passage you need sure there anything embrassing text hidden all necessary making generator Internet.</p>
+                            <h5 class="f-18 mt-4">/wiki</h5>
+                            <p class="text-muted mt-3">Searches Wikipedia and Returns the results!</p>
                             <div class="mt-3">
-                                <a href="" class="text-primary font-weight-600"> Learn more <i class="mdi mdi-arrow-right ml-2"></i> </a>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4">
+                        <div class="features-box mt-4">
+                            <h1 class="features-title">04</h1>
+                            <div class="features-img">
+                                <img src="images/icon/compose.png" class="img-fluid" alt="" />
+                            </div>
+
+                            <h5 class="f-18 mt-4">/8ball</h5>
+                            <p class="text-muted mt-3">Play 8 ball with Cuddly_!</p>
+                            <div class="mt-3">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-box mt-4">
+                            <h1 class="features-title">03</h1>
+                            <div class="features-img">
+                                <img src="images/icon/presentation.png" class="img-fluid" alt="" />
+                            </div>
+
+                            <h5 class="f-18 mt-4">/nuke</h5>
+                            <p class="text-muted mt-3">Find it out yourself!</p>
+                            <div class="mt-3">
+                            </div>
+                        </div>
                 </div>
             </div>
         </section>
         <!-- END SERVICES -->
-
-        <!-- START WORK -->
-        <section class="section" id="portfolio">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <p class="title-sub-heading text-primary f-18">Our Portfolio</p>
-                            <h2 class="title-heading">We work fast, but we do not do it alone.</h2>
-                            <p class="title-desc text-muted mt-2">Donec dapibus dolor at semper dictum phasellus fringilla sem risus mollis faucibus dolor eleifend id maecenas viverra.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mt-5 pt-2">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <ul class="col container-filter portfolioFilte list-unstyled mb-0" id="filter">
-                                <li><a class="categories active" data-filter="*">All</a></li>
-                                <li><a class="categories" data-filter=".Brand">Brand</a></li>
-                                <li><a class="categories" data-filter=".Design">Design</a></li>
-                                <li><a class="categories" data-filter=".Graphic">Graphic</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- End portfolio  -->
-                <div class="port portfolio-masonry mt-5">
-                    <div class="portfolioContainer row">
-                        <div class="col-lg-4 col-md-4 Brand p-3">
-                            <div class="item-box p-2 rounded">
-                                <a class="cbox-gallary1 mfp-image" href="images/portfolio/img-1.png" title="Consumer Insights">
-                                    <img class="item-container rounded" src="images/portfolio/img-1.png" alt="work-img" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-4 Design p-3">
-                            <div class="item-box p-2 rounded">
-                                <a class="cbox-gallary1 mfp-image" href="images/portfolio/img-2.png" title="Financial Service">
-                                    <img class="item-container rounded" src="images/portfolio/img-2.png" alt="work-img" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-4 Design p-3">
-                            <div class="item-box p-2 rounded">
-                                <a class="cbox-gallary1 mfp-image" href="images/portfolio/img-3.png" title="Latest Technology">
-                                    <img class="item-container rounded" src="images/portfolio/img-3.png" alt="work-img" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-4 Graphic p-3">
-                            <div class="item-box p-2 rounded">
-                                <a class="cbox-gallary1 mfp-image" href="images/portfolio/img-4.png" title="Business Growth">
-                                    <img class="item-container rounded" src="images/portfolio/img-4.png" alt="work-img" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-4 Brand p-3">
-                            <div class="item-box p-2 rounded">
-                                <a class="cbox-gallary1 mfp-image" href="images/portfolio/img-5.png" title="International Business">
-                                    <img class="item-container rounded" src="images/portfolio/img-5.png" alt="work-img" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-4 Design Brand p-3">
-                            <div class="item-box p-2 rounded">
-                                <a class="cbox-gallary1 mfp-image" href="images/portfolio/img-6.png" title="Consumer Products">
-                                    <img class="item-container rounded" src="images/portfolio/img-6.png" alt="work-img" />
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- END WORK -->
-
-        <!-- START COUNTER -->
-        <section class="section bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <p class="title-sub-heading text-primary f-18">Specialized Skill</p>
-                            <h2 class="title-heading">Why do people love us</h2>
-                            <p class="title-desc text-muted mt-2">Donec dapibus dolor at semper dictum phasellus fringilla sem risus mollis faucibus dolor eleifend id maecenas viverra.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row align-items-center mt-4 pt-3" id="counter">
-                    <div class="col-lg-4">
-                        <div class="counter-box mt-4 p-4">
-                            <h2 class="counter-count text-primary"><span class="counter-value" data-count="49">25</span> <span class="count-plus"> M</span></h2>
-                            <h5 class="mt-2 f-18">Creative User</h5>
-                            <p class="text-muted mt-3 mb-0">Aliquam erat volutpat elit quisque porta varius malesauada nuarnc turpis imperdiet id odio.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="counter-box mt-4 p-4">
-                            <h2 class="counter-count text-primary"><span class="counter-value" data-count="97">36</span> <span class="count-plus"> %</span></h2>
-                            <h5 class="mt-2 f-18">Successful rate</h5>
-                            <p class="text-muted mt-3 mb-0">Vivamus id lorem ut dolor sagittis elementum finibus vel felis maecenas laoreet leo sollicitudin.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="p-4">
-                            <div class="mt-4">
-                                <p class="font-weight-500 mb-2">Html</p>
-                                <div class="progress" style="height: 9px;">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
-                                </div>
-                            </div>
-
-                            <div class="mt-4">
-                                <p class="font-weight-500 mb-2">Css</p>
-                                <div class="progress" style="height: 9px;">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 87%;" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100">87%</div>
-                                </div>
-                            </div>
-
-                            <div class="mt-4">
-                                <p class="font-weight-500 mb-2">Bootstrap</p>
-                                <div class="progress" style="height: 9px;">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- END COUNTER -->
 
         <!-- START PRICING -->
         <section class="section pb-5" id="pricing">
@@ -297,9 +176,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <p class="title-sub-heading text-primary f-18">Our Pricing</p>
-                            <h2 class="title-heading">Choose the offering that works best for you</h2>
-                            <p class="title-desc text-muted mt-2">Donec dapibus dolor at semper dictum phasellus fringilla sem risus mollis faucibus dolor eleifend id maecenas viverra.</p>
+                            <h2 class="title-heading">APIs Used</h2>
+                            <p class="title-desc text-muted mt-2">API</p>
                         </div>
                     </div>
                 </div>
