--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="features-box mt-4">
-                            <h1 class="features-title">03</h1>
+                            <h1 class="features-title">05</h1>
                             <div class="features-img">
                                 <img src="images/icon/presentation.png" class="img-fluid" alt="" />
                             </div>
@@ -166,7 +166,52 @@
                             </div>
                         </div>
                 </div>
+                <div class="features-box mt-4">
+                    <h1 class="features-title">06</h1>
+                    <div class="features-img">
+                        <img src="images/icon/compose.png" class="img-fluid" alt="" />
+                    </div>
+
+                    <h5 class="f-18 mt-4">/reddit</h5>
+                    <p class="text-muted mt-3">Displays Posts from the chosen subReddit!</p>
+                    <div class="mt-3">
+                    </div>
             </div>
+            <div class="features-box mt-4">
+                <h1 class="features-title">07</h1>
+                <div class="features-img">
+                    <img src="images/icon/compose.png" class="img-fluid" alt="" />
+                </div>
+
+                <h5 class="f-18 mt-4">/blursed</h5>
+                <p class="text-muted mt-3">Displays Posts from the subReddit r/blursed!</p>
+                <div class="mt-3">
+                </div>
+              </div>
+              <div class="col-lg-4">
+                  <div class="features-box mt-4">
+                      <h1 class="features-title">08</h1>
+                      <div class="features-img">
+                          <img src="images/icon/presentation.png" class="img-fluid" alt="" />
+                      </div>
+
+                      <h5 class="f-18 mt-4">/pic</h5>
+                      <p class="text-muted mt-3">Searches for the asked Images and Returns it!</p>
+                      <div class="mt-3">
+                      </div>
+                    </div>
+                    </div>
+                    <div class="features-box mt-4">
+                        <h1 class="features-title">09</h1>
+                        <div class="features-img">
+                            <img src="images/icon/compose.png" class="img-fluid" alt="" />
+                        </div>
+
+                        <h5 class="f-18 mt-4">/dadjokes</h5>
+                        <p class="text-muted mt-3">Displays Dad Jokes, <br> Who Doesn't like Dad Jokes!</p>
+                        <div class="mt-3">
+                        </div>
+
         </section>
         <!-- END SERVICES -->
 
