--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="footer-info mt-4">
-                            <img src="images/logo-dark.png" alt="" height="22">
+                            <img src="images/Black.svg" alt="" height="80">
                             <h5 class="f-18 mt-4 pt-1 line-height_1_6">
                                 Business opportunities Are Like <br>
                                 Buses, There's Always Another <br>
@@ -343,47 +343,6 @@
                             </h5>
                         </div>
                     </div>
-
-                    <div class="col-lg-5">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="mt-4">
-                                    <h5 class="f-18">Features</h5>
-                                    <ul class="list-unstyled footer-link mt-3">
-                                        <li><a href="">6 Home </a></li>
-                                        <li><a href="">Technology</a></li>
-                                        <li><a href="">News &amp; Events</a></li>
-                                        <li><a href="">Company</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4">
-                                <div class="mt-4">
-                                    <h5 class="f-18">Policies</h5>
-                                    <ul class="list-unstyled footer-link mt-3">
-                                        <li><a href="">Security</a></li>
-                                        <li><a href="">Jobs</a></li>
-                                        <li><a href="">Policy</a></li>
-                                        <li><a href="">Condition</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4">
-                                <div class="mt-4">
-                                    <h5 class="f-18">Company</h5>
-                                    <ul class="list-unstyled footer-link mt-3">
-                                        <li><a href="">Leadership</a></li>
-                                        <li><a href="">Careers</a></li>
-                                        <li><a href="">Contact us</a></li>
-                                        <li><a href="">Maps</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="col-lg-3">
                         <div class="mt-4 pl-0 pl-lg-4">
                             <h5 class="f-18">Follow Us</h5>
