--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="text-center">
-                            <p class="text-muted mb-0">2020 © Floaks. Design by Themesdesign</p>
+                            <p class="text-muted mb-0">2020 © Cuddly_</p>
                         </div>
                     </div>
                 </div>
