--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@
                         <div class="footer-info mt-4">
                             <img src="images/Black.svg" alt="" height="80">
                             <h5 class="f-18 mt-4 pt-1 line-height_1_6">
-                                Business opportunities Are Like <br>
-                                Buses, There's Always Another <br>
-                                One Coming...
+                                Invite Cuddly_ bot Today!<br>
+                          <br>  <a href="https://discord.com/api/oauth2/authorize?client_id=963400827869995008&amp;permissions=8&amp;scope=bot%20applications.commands" class="btn btn-outline-primary">Add Cuddly_ to your server!</a>
                             </h5>
                         </div>
                         </div>
