--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         <meta charset="utf-8">
         <title>Cuddly_ Discord Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Premium Bootstrap 4 Landing Page Template">
+        <meta name="description" content="Cuddly_ Discord Bot's Official Website">
         <meta name="keywords" content="bootstrap 4, premium, marketing, multipurpose">
         <meta content="Themesdesign" name="author">
         <!-- favicon -->
